# Books-API

./: .env  Cargo.toml  README.md
migrations/2019-09-15-182812_create_books/: up.sql
public/: 404.html
src/: db.rs  main.rs  models.rs  routes.rs
