[package]
name = "Rust-API"
version = "0.1.0"
authors = ["Allan Mogusu <allannelly690@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.2", features = ["postgres"] }
dotenv = "0.14.1"
r2d2="0.8.5"
r2d2-diesel="1.0.0"
serde="1.0.100"
serde_derive="1.0.100"
serde_json="1.0.40"

rocket = "0.4.2"
rocket_codegen = {git = "https://github.com/SergioBenitez/Rocket.git", branch="master"}


[dependencies.rocket_contrib]
version = "0.4.2"
default_features = false
features = [ "json", "serve"]

[patch.crates-io.rocket]
git = "https://github.com/SergioBenitez/Rocket.git"
rev = "ad0ba0d"

[patch.crates-io.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket.git"
rev = "ad0ba0d"

